login/styling/authentication

--- a/src/app/provider-form/provider-form.component.html
+++ b/src/app/provider-form/provider-form.component.html
@@ -1,39 +1,1 @@
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-            <img src="../../../assets/provider.jpg" height="100%" width="100%">
-        </div>
-        <div class="col-md-4 mt-3">
-            <h3 class="text-success text-center">Welcome</h3>
-            <form class="mt-4">
-                <h5 class="text-primary mb-3">Sign up</h5>
-
-
-                <div class="form-floating mb-3">
-
-                    <input type="text" class="form-control" id="floatingInput" placeholder="username" name="username"
-                        [(ngModel)]="username">
-                    <label for="floatingInput">Email address</label>
-                </div>
-                <div class="form-floating mb-3">
-
-                    <input type="password" class="form-control" id="floatingPassword" placeholder="password"
-                        name="password" [(ngModel)]="password">
-                    <label for="floatingPassword">Password</label>
-                </div>
-
-                <div class="form-floating mb-3">
-                    <input type="text" class="form-control" id="floatingInput" placeholder="Provider service name"
-                        name="provider" [(ngModel)]="provider">
-                    <label for="floatingInput">Service Provider Name</label>
-                </div>
-
-                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button type="button" routerLink="/items-form" class="btn btn-outline-success me-md-2"
-                        (click)="service()">Next</button>
-                </div>
-                <a routerLink="/" class="btn btn-danger me-md-2">Cancel</a>
-            </form>
-        </div>
-    </div>
-</div>
+<div class="text-white">This is the provider-form page</div>
