--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -1,1 +1,38 @@
-<h3>Welcome home!</h3>
+<br><br><br><br><br><br><br>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-8">
+            <div class="card-group mb-0">
+                <div class="card p-4">
+                    <form class="card-body">
+                        <h1>Login</h1>
+                        <p class="text-muted">Sign In to your account</p>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" name="email" [(ngModel)]="email" placeholder="Email">
+                        </div>
+                        <div class="input-group mb-4">
+                            <input type="password" class="form-control" name="password" [(ngModel)]="password" placeholder="Password">
+                        </div>
+                        <div class="row">
+                            <div class="col-6">
+                                <button type="submit" (click)=checkLogin() class="btn btn-secondary px-4">Login</button>
+                            </div>
+                            <div class="col-6 text-right">
+                                <button type="button" class="btn btn-link px-0">Forgot password?</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="card text-white bg-secondary py-5 d-md-down-none" style="width:44%">
+                    <div class="card-body text-center">
+                        <div>
+                            <h2>Register</h2>
+                            <p class="mt-4">Sign up here if you don't<br/> have an account</p>
+                            <a routerLink='/register-form' class="btn btn-secondary active mt-3">Register Now!</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
