--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -4,8 +4,8 @@
             <a class="navbar-brand">FeastFreedom.com</a>
             <div id="main-nav" class="collapse navbar-collapse">
                 <ul class="navbar-nav ml-auto">
-                    <li><a class="nav-item nav-link active">Home</a></li>
-                    <li><a class="nav-item nav-link">About Us</a></li>
+                    <li><a href="customer-page" class="nav-item nav-link active">Home</a></li>
+                    <li><a href="kitchen-form" class="nav-item nav-link">New Kitchen</a></li>
                     <li><a class="nav-item nav-link">Contact Us</a></li>
                     <li><a class="nav-item nav-link">Cart</a></li>
                     <li><a href="logout" class="nav-item nav-link">Logout</a></li>
