--- a/src/app/customer-page/customer-page.component.html
+++ b/src/app/customer-page/customer-page.component.html
@@ -11,9 +11,9 @@
                     </div>
                 </div>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item"><em class="fa fa-home float-right"></em> Address : 123 St 72345</li>
-                    <li class="list-group-item"><em class="fa fa-envelope float-right"></em> Email : <a href="#">email@email.com</a></li>
-                    <li class="list-group-item"><em class="fa fa-phone float-right"></em> Phone : 000 123-456</li>
+                    <li class="list-group-item"><em class="fa fa-home float-right"></em> Address : {{kitchen.address}}</li>
+                    <li class="list-group-item"><em class="fa fa-envelope float-right"></em> Email : <a href="#">{{kitchen.email}}</a></li>
+                    <li class="list-group-item"><em class="fa fa-phone float-right"></em> Phone : {{kitchen.phone}}</li>
                 </ul>
                 <div class="card-body">
                     <div class="float-right btn-group btn-group-sm">
