--- a/src/app/home-form/home-form.component.html
+++ b/src/app/home-form/home-form.component.html
@@ -4,18 +4,18 @@
         <div class="col-md-8">
             <div class="card-group mb-0">
                 <div class="card p-4">
-                    <form class="card-body">
+                    <form class="card-body" [formGroup]="loginForm" (ngSubmit)="checkLogin()" ngNativeValidate>
                         <h1>Login</h1>
                         <p class="text-muted">Sign In to your account</p>
                         <div class="input-group mb-3">
-                            <input type="text" class="form-control" name="email" [(ngModel)]="email" placeholder="Email">
+                            <input type="text" class="form-control" name="email" formControlName="email" placeholder="Email" required>
                         </div>
                         <div class="input-group mb-4">
-                            <input type="password" class="form-control" name="password" [(ngModel)]="password" placeholder="Password">
+                            <input type="password" class="form-control" name="password" formControlName="password" placeholder="Password" required>
                         </div>
                         <div class="row">
                             <div class="col-6">
-                                <button type="submit" (click)=checkLogin() class="btn btn-secondary px-4">Login</button>
+                                <button type="submit" class="btn btn-secondary px-4">Login</button>
                             </div>
                             <div class="col-6 text-right">
                                 <button type="button" class="btn btn-link px-0">Forgot password?</button>
